--- a/MyTrade/Views/User/UserDashBoard.cshtml
+++ b/MyTrade/Views/User/UserDashBoard.cshtml
@@ -400,7 +400,7 @@
                                     for (int i = 0; i < 1; i++)
                                     {
 
-                                        <div class="carousel-item active" style="padding: 10px;">
+                                        <div class="carousel-item active" style="padding: 0px 10px;">
                                             <img class="d-block w-100 img-height" src="@Model.lstReward[i].Image" alt="First slide" style="border-radius: 10px;">
                                             <div class="carousel-caption">
                                                 <h5>@Model.lstReward[i].Title</h5>
@@ -416,7 +416,7 @@
                                     for (int i = 1; i < Model.lstReward.Count; i++)
                                     {
 
-                                        <div class="carousel-item" style="padding: 10px;">
+                                        <div class="carousel-item" style="padding:0px 10px">
                                             <img class="d-block w-100 img-height" src="@Model.lstReward[i].Image" alt="First slide" style="border-radius: 10px;">
                                             <div class="carousel-caption d-none d-sm-block">
                                                 <h5>@Model.lstReward[i].Title</h5>
